src/objects/zqu__ProductOption__c.object
<CustomObject>
    <fields>
        <fullName>zqu__ChildProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product belongs to the bundle or product group.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.
Note:
* A Bundle typed Product cannot set to Child Product field</errorMessage>
            <filterItems>
                <field>Product2.zqu__Type__c</field>
                <operation>notEqual</operation>
                <value>Bundle</value>
            </filterItems>
            <filterItems>
                <field>Product2.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Options （Child Options)</relationshipLabel>
        <relationshipName>Child_Product_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__OptionType__c</fullName>
        <description>The type of the product option.</description>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                    <default>true</default>
                    <label>Optional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is only for Snapshot record type to lookup the original instance.</description>
        <label>Original Option</label>
        <referenceTo>zqu__ProductOption__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>Product_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product which contains this product option.</description>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>Product_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductOptionGroup__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The product group which contains this product option.</description>
        <label>Product Option Group</label>
        <referenceTo>zqu__ProductOptionGroup__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanOptionCount__c</fullName>
        <description>Quantity of Product Rate Plan Option object</description>
        <inlineHelpText>Quantity of Product Rate Plan Option object</inlineHelpText>
        <label>Product Rate Plan Option Count</label>
        <summaryForeignKey>zqu__ProductRatePlanOption__c.zqu__ProductOption__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__RootProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Options (Root Product)</relationshipLabel>
        <relationshipName>RootProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RootQrpId__c</fullName>
        <description>The unique ID corresponding to the root bundle that a snapshotted product option belongs to.</description>
        <inlineHelpText>The unique ID corresponding to the root bundle that a snapshotted product option belongs to.</inlineHelpText>
        <label>Root Quote Rate Plan ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RootQuote__c</fullName>
        <description>The unique ID associating a snapshotted Product Option to the Quote that it belongs to.</description>
        <inlineHelpText>The unique ID associating a snapshotted Product Option to the Quote that it belongs to.</inlineHelpText>
        <label>Quote</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Product Option</label>
    <nameField>
        <label>Product Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zqu__Child_Product_Cannot_Be_Bundle</fullName>
        <active>true</active>
        <description>Child Product type cannot be Bundle</description>
        <errorConditionFormula>ISPICKVAL(zqu__ChildProduct__r.zqu__Type__c,&apos;Bundle&apos;)</errorConditionFormula>
        <errorDisplayField>zqu__ChildProduct__c</errorDisplayField>
        <errorMessage>Child Product type cannot be Bundle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Child_Product_Not_Blank</fullName>
        <active>true</active>
        <description>Child Product cannot be null</description>
        <errorConditionFormula>ISBLANK( zqu__ChildProduct__c )</errorConditionFormula>
        <errorDisplayField>zqu__ChildProduct__c</errorDisplayField>
        <errorMessage>Child Product field must have a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Parent_Not_Same_As_Child</fullName>
        <active>true</active>
        <description>Parent Product cannot be the same as Child Product</description>
        <errorConditionFormula>zqu__ChildProduct__c  =  zqu__ParentProduct__c &amp;&amp; NOT(ISBLANK( zqu__ChildProduct__c )) &amp;&amp; NOT(ISBLANK(  zqu__ParentProduct__c  ))</errorConditionFormula>
        <errorMessage>Parent Product cannot be the same as Child Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Should_have_one_parent</fullName>
        <active>true</active>
        <description>A Product Option should belong to either a Parent Product or a Product Option Group</description>
        <errorConditionFormula>AND( 
  ISBLANK( zqu__ParentProduct__c ),
  ISBLANK( zqu__ProductOptionGroup__c ) 
)</errorConditionFormula>
        <errorMessage>Either a Parent Product or a Product Option Group should be specified to a Product Option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Standalone_Prod_Cannot_Have_Included_PO</fullName>
        <active>true</active>
        <description>A Standalone typed Product cannot have an &quot;IncludedTyped&quot; Product Option</description>
        <errorConditionFormula>ISPICKVAL( zqu__ParentProduct__r.zqu__Type__c ,&apos;Standalone&apos;) &amp;&amp;  ISPICKVAL( zqu__OptionType__c , &apos;Included&apos;)</errorConditionFormula>
        <errorMessage>A Standalone Product cannot have a Product Option if the Option Type is Included</errorMessage>
    </validationRules>
</CustomObject>